hphp/test/zend/bad/ext/reflection/tests/bug38942.php
<?php
class foo {
    public function foo() {}
}

class bar extends foo {
}
ReflectionClass::export("bar");
?>
